--- a/tools/cfgs/dataset_configs/avltruck/DA/avltruck_dataset.yaml
+++ b/tools/cfgs/dataset_configs/avltruck/DA/avltruck_dataset.yaml
@@ -70,9 +70,10 @@ DISREGARD_TRUNCATED: True
 #removed dets and gts that are truncated not in fov before evaluation
 EVAL_FOV_ONLY: True
 EVAL_MAX_DISTANCE: [0, 1000]
+EVAL_IGNORE_CLASSES: []
 
 POST_SN_ENABLED: False
-POST_SN_SOURCE: "AVLRooftop"
+POST_SN_SOURCE: "ZOD"
 POST_SN_MAP: { 
   "AVLRooftop":   
     {"Vehicle": [-0.225, -0.183, -0.068],
