--- a/tools/cfgs/avltruck_models/iassd.yaml
+++ b/tools/cfgs/avltruck_models/iassd.yaml
@@ -1,7 +1,7 @@
-CLASS_NAMES: ["Vehicle", "Cyclist", "Pedestrian", "Truck"]
+CLASS_NAMES: ['Vehicle', 'Pedestrian', 'Cyclist', 'Truck']
 
 DATA_CONFIG:
-    _BASE_CONFIG_: cfgs/dataset_configs/avlrooftop/OD/avlrooftop_dataset.yaml
+    _BASE_CONFIG_: cfgs/dataset_configs/avltruck/OD/avltruck_dataset.yaml
     POINT_CLOUD_RANGE: [-75.2, -75.2, -2, 75.2, 75.2, 4]
 
     DISREGARD_TRUNCATED: False
