--- a/tools/cfgs/avltruck_models/pvrcnnpp_ros_rbds.yaml
+++ b/tools/cfgs/avltruck_models/pvrcnnpp_ros_rbds.yaml
@@ -4,7 +4,6 @@ DATA_CONFIG:
   _BASE_CONFIG_: cfgs/dataset_configs/avltruck/OD/avltruck_dataset.yaml
 
   INCLUDE_DIODE_IDS: True
-  BEAM_LABEL_VFOV: None   #TODO
   NUM_BEAMS: 128
 
   DATA_AUGMENTOR:
@@ -14,7 +13,7 @@ DATA_CONFIG:
       - NAME: gt_sampling
         USE_ROAD_PLANE: False
         DB_INFO_PATH:
-          - avl_dbinfos_train.pkl
+          - avl_dbinfos_train_beamlabels.pkl
         PREPARE:
           {
             filter_by_min_points:
@@ -54,10 +53,15 @@ DATA_CONFIG:
           #"LargeVehicle_Truck:0",
           #"LargeVehicle_TruckCab:0",
           #"Trailer:0",
-        NUM_POINT_FEATURES: 4
+        NUM_POINT_FEATURES: 5
         DATABASE_WITH_FAKELIDAR: False
         REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
         LIMIT_WHOLE_SCENE: True
+      
+      - NAME: random_beam_downsample
+        BEAM_PROB: 0.5
+        FILTER_GT_BOXES: True
+        MIN_POINTS_OF_GT: 5
 
       - NAME: random_world_flip
         ALONG_AXIS_LIST: ["x", "y"]
