--- a/tools/cfgs/zod_models/iassd.yaml
+++ b/tools/cfgs/zod_models/iassd.yaml
@@ -1,4 +1,4 @@
-CLASS_NAMES: ["Vehicle", "Cyclist", "Pedestrian", "Truck"]
+CLASS_NAMES: ['Vehicle', 'Pedestrian', 'Cyclist', 'Truck']
 
 DATA_CONFIG:
     _BASE_CONFIG_: cfgs/dataset_configs/zod/OD/zod_dataset.yaml
