--- a/tools/cfgs/dataset_configs/avltruck/DA/avltruck_dataset.yaml
+++ b/tools/cfgs/dataset_configs/avltruck/DA/avltruck_dataset.yaml
@@ -69,11 +69,12 @@ DISREGARD_TRUNCATED: True
 
 #removed dets and gts that are truncated not in fov before evaluation
 EVAL_FOV_ONLY: True
+#EVAL_MAX_DISTANCE: [[0, 1000], [0,20], [20, 40], [40, 60], [60, 80], [80, 100], [100, 150]]
 EVAL_MAX_DISTANCE: [0, 1000]
 EVAL_IGNORE_CLASSES: []
 
-POST_SN_ENABLED: True
-POST_SN_SOURCE: "AVLRooftop"
+POST_SN_ENABLED: False
+POST_SN_SOURCE: "ZOD"
 POST_SN_MAP: { 
   "AVLRooftop":   
     {"Vehicle": [-0.225, -0.183, -0.068],
