--- a/tools/cfgs/dataset_configs/avlrooftop/OD/avlrooftop_dataset_nogtsampling.yaml
+++ b/tools/cfgs/dataset_configs/avlrooftop/OD/avlrooftop_dataset_nogtsampling.yaml
@@ -76,6 +76,9 @@ DISABLE_NLZ_FLAG_ON_POINTS: True
 USE_SHARED_MEMORY: False # it will load the data to shared memory to speed up (DO NOT USE IT IF YOU DO NOT FULLY UNDERSTAND WHAT WILL HAPPEN)
 SHARED_MEMORY_FILE_LIMIT: 35000 # set it based on the size of your shared memory
 
+SET_TRAINING_FRAMES: False
+TRAINING_FRAMES: []
+
 DATA_AUGMENTOR:
   #DISABLE_AUG_LIST: ["uniform_beam_downsample", "random_world_flip", "random_world_rotation", "random_world_scaling"]
   #DISABLE_AUG_LIST: ["uniform_beam_downsample", "gt_sampling", "random_world_flip", "random_world_rotation", "random_world_scaling"]
