--- a/tools/cfgs/dataset_configs/zod/OD/zod32_dataset_nogtsampling.yaml
+++ b/tools/cfgs/dataset_configs/zod/OD/zod32_dataset_nogtsampling.yaml
@@ -61,16 +61,18 @@ POINT_FEATURE_ENCODING:
 
 INFO_PATH: { "train": zod_infos_train_full.pkl, "test": zod_infos_val_full.pkl }
 
-INCLUDE_DIODE_IDS: True
+#to mimic sparse lidar
+ENABLE_BEAM_DOWNSAMPLE: True
+BEAM_DOWNSAMPLE_FACTOR: 4
 
 DATA_AUGMENTOR:
-  DISABLE_AUG_LIST: ["placeholder"]
+  DISABLE_AUG_LIST: ["gt_sampling"]
   #DISABLE_AUG_LIST: ["random_world_flip", "random_world_rotation", "random_world_scaling"]
   AUG_CONFIG_LIST:
     - NAME: gt_sampling
       USE_ROAD_PLANE: False
       DB_INFO_PATH:
-        - zod_dbinfos_train_full_beamlabels.pkl
+        - zod_dbinfos_train_full.pkl
       PREPARE:
         {
           filter_by_min_points:
@@ -103,15 +105,10 @@ DATA_AUGMENTOR:
           "Pedestrian: 10",
         ]
         # [Vehicle_Car:18, Vehicle_Van:2, VulnerableVehicle_Bicycle:10, Pedestrian:20]
-      NUM_POINT_FEATURES: 5
+      NUM_POINT_FEATURES: 4
       DATABASE_WITH_FAKELIDAR: False
       REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
       LIMIT_WHOLE_SCENE: True
-    
-    - NAME: uniform_beam_downsample
-      BEAM_DOWNSAMPLEFACTOR: 8
-      FILTER_GT_BOXES: True
-      MIN_POINTS_OF_GT: 5
 
     - NAME: random_world_flip
       ALONG_AXIS_LIST: ["x", "y"]
