--- a/tools/cfgs/zod_models/pvrcnnpp_ST++truck_gace.yaml
+++ b/tools/cfgs/zod_models/pvrcnnpp_ST++truck_gace.yaml
@@ -156,6 +156,50 @@ SELF_TRAIN:
         LOSS_WEIGHT: 1.0
         SEP_LOSS_WEIGHTS: [1.0, 1.0, 1.0]
 
+    GACE:
+      ENABLED: True
+      STORE_DETECTIONS: False    # Works only single GPU training
+      #CKPT: /home/griesbacher/thesis/3DTrans/gace/gace_output/2023-12-27_19-26-03_AVLTruckDataset_ZODDataset_5/gace_model.pth
+      STORE_GACE: False
+      RETRAIN_GACE: False
+      BATCH_SIZE: 2048
+      NUM_WORKERS: 4
+
+      NR_MAX_DET_PER_SAMPLE: 500
+      
+      NORM_FACTORS: {
+          'cx': 123.2,
+          'cy': 75.2,
+          'cz': 4.0,
+          #veh, ped, cyc, tru
+          'dx': [6.019, 1.142, 2.494, 27.699],
+          'dy': [2.394, 0.982, 1.072, 3.652], 
+          'dz': [2.661, 2.000, 2.000, 4.529],
+          'dist': 144.3,
+          'nr_pts': [5000.0, 1000.0, 1000.0, 60000.0],
+      }
+
+      NORM_FACTORS_CP: {
+          'dist': 249.0,
+      }
+      
+      CONTEXT_RADIUS: 20
+      MAX_NR_NEIGHBORS: 30
+    
+      MODEL:
+          H_I_HIDDEN_DIM: 256
+          H_I_OUTPUT_DIM: 128
+          H_C_HIDDEN_DIM: 256
+          H_C_OUTPUT_DIM: 64
+          H_F_HIDDEN_DIM: 256
+      
+      TRAIN:
+          NUM_EPOCHS: 10
+          LR: 0.002
+          IOU_LOSS_W: 0.5
+          SFL_ALPHA: 0.5
+          SFL_GAMMA: 1 
+
     SCORE_THRESH: [0.45, 0.75, 0.75, 0.85]             #Threshold per class
     NEG_THRESH: [0.25, 0.45, 0.5, 0.4]
 
@@ -189,7 +233,7 @@ SELF_TRAIN:
 
 OPTIMIZATION:
     OPTIMIZER: adam_onecycle
-    LR: 0.003
+    LR: 0.0015
     WEIGHT_DECAY: 0.001
     MOMENTUM: 0.9
 
