--- a/tools/cfgs/zod_models/pvrcnnpp_ST++rooftop_gace.yaml
+++ b/tools/cfgs/zod_models/pvrcnnpp_ST++rooftop_gace.yaml
@@ -1,26 +1,9 @@
-_BASE_CONFIG_: cfgs/avltruck_models/pvrcnnpp.yaml
+_BASE_CONFIG_: cfgs/zod_models/pvrcnnpp.yaml
 
 CLASS_NAMES: ['Vehicle', 'Pedestrian', 'Cyclist', 'Truck']
 
-
-MODEL:
-
-    POST_PROCESSING:
-        RECALL_THRESH_LIST: [0.3, 0.5, 0.7]
-        SCORE_THRESH: 0.15
-        OUTPUT_RAW_SCORE: False
-
-        EVAL_METRIC: waymo
-
-        NMS_CONFIG:
-            MULTI_CLASSES_NMS: False
-            NMS_TYPE: nms_gpu
-            NMS_THRESH: 0.01
-            NMS_PRE_MAXSIZE: 4096
-            NMS_POST_MAXSIZE: 500
-
 DATA_CONFIG:
-  _BASE_CONFIG_: cfgs/dataset_configs/avltruck/OD/avltruck_dataset.yaml
+  _BASE_CONFIG_: cfgs/dataset_configs/zod/OD/zod_dataset.yaml
 
   DATA_AUGMENTOR:
     DISABLE_AUG_LIST: ["gt_sampling", "normalize_object_size_multiclass"]
@@ -73,20 +56,24 @@ DATA_CONFIG:
         WORLD_ROT_ANGLE: [-0.78539816, 0.78539816]
 
       - NAME: random_world_scaling
-        WORLD_SCALE_RANGE: [0.95, 1.05]
+        WORLD_SCALE_RANGE: [0.97, 1.03]
 
       - NAME: random_object_scaling
-        SCALE_UNIFORM_NOISE: [0.9, 1.10]
+        SCALE_UNIFORM_NOISE: [0.95, 1.05]
+
+      - NAME: random_object_rotation
+        ROT_PROB: 0.8
+        ROT_UNIFORM_NOISE: [ -0.38539816, 0.38539816 ]
 
       - NAME: normalize_object_size_multiclass
         SIZE_RES: [[0.225, 0.183, 0.068], [0.14, 0.144, 0.093], [0.231, 0.055, 0.165], [0.502, 0.456, 0.203]]   #Vehicle, Pedestrian, Bicycle, Truck
 
 
 DATA_CONFIG_TAR:
-    _BASE_CONFIG_: cfgs/dataset_configs/zod/OD/zod_dataset.yaml
+    _BASE_CONFIG_: cfgs/dataset_configs/avlrooftop/OD/avlrooftop_dataset.yaml
     TARGET: True
     USE_PSEUDO_LABEL: True
-    TRAIN_FOV_ONLY: True
+    TRAIN_FOV_ONLY: False
 
     CLASS_NAMES: ['Vehicle', 'Pedestrian', 'Cyclist', 'Truck']
 
@@ -135,16 +122,11 @@ DATA_CONFIG_TAR:
         - NAME: random_world_flip
           ALONG_AXIS_LIST: ["x", "y"]
 
+        - NAME: random_world_rotation
+          WORLD_ROT_ANGLE: [-0.378760688, 0.378760688]
+
         - NAME: random_world_scaling
           WORLD_SCALE_RANGE: [0.97, 1.03]
-
-        - NAME: random_object_scaling
-          SCALE_UNIFORM_NOISE: [0.95, 1.05]
-
-        - NAME: random_object_rotation
-          ROT_PROB: 0.8
-          ROT_UNIFORM_NOISE: [ -0.38539816, 0.38539816 ]
-
 
 
 SELF_TRAIN:
@@ -158,9 +140,52 @@ SELF_TRAIN:
         LOSS_WEIGHT: 1.0
         SEP_LOSS_WEIGHTS: [1.0, 1.0, 1.0]
 
-    SCORE_THRESH: [0.45, 0.75, 0.75, 0.85]             #    SCORE_THRESH: [0.45, 0.75, 0.75, 0.85]             #Threshold per class
-    NEG_THRESH: [0.25, 0.45, 0.5, 0.4]
+    GACE:
+      ENABLED: True
+      STORE_DETECTIONS: True    # Works only single GPU training
+      STORE_GACE: True
+      RETRAIN_GACE: False
+      BATCH_SIZE: 2048
+      NUM_WORKERS: 4
+
+      NR_MAX_DET_PER_SAMPLE: 500
+      
+      NORM_FACTORS: {
+          'cx': 123.2,
+          'cy': 75.2,
+          'cz': 4.0,
+          #veh, ped, cyc, tru
+          'dx': [6.019, 1.142, 2.494, 27.699],
+          'dy': [2.394, 0.982, 1.072, 3.652], 
+          'dz': [2.661, 2.000, 2.000, 4.529],
+          'dist': 144.3,
+          'nr_pts': [5000.0, 1000.0, 1000.0, 60000.0],
+      }
+
+      NORM_FACTORS_CP: {
+          'dist': 249.0,
+      }
+      
+      CONTEXT_RADIUS: 20
+      MAX_NR_NEIGHBORS: 30
     
+      MODEL:
+          H_I_HIDDEN_DIM: 256
+          H_I_OUTPUT_DIM: 128
+          H_C_HIDDEN_DIM: 256
+          H_C_OUTPUT_DIM: 64
+          H_F_HIDDEN_DIM: 256
+      
+      TRAIN:
+          NUM_EPOCHS: 10
+          LR: 0.002
+          IOU_LOSS_W: 0.5
+          SFL_ALPHA: 0.5
+          SFL_GAMMA: 1 
+
+    SCORE_THRESH: [0.45, 0.75, 0.75, 0.85]             #Threshold per class
+    NEG_THRESH: [0.25, 0.45, 0.5, 0.4]
+
     UPDATE_PSEUDO_LABEL: [0]
     UPDATE_PSEUDO_LABEL_INTERVAL: 4
     INIT_PS: None
@@ -168,8 +193,8 @@ SELF_TRAIN:
     
     PROG_AUG:
         ENABLED: False
-        UPDATE_AUG: [4, 8]
-        SCALE: 1.2
+        UPDATE_AUG: [5, 10, 20, 25]
+        SCALE: 1.05
 
     MEMORY_ENSEMBLE:
         ENABLED: True
