added feat3 cgfs deleted some debug outputs

--- a/tools/cfgs/dataset_configs/avlrooftop/DA/avlrooftop_dataset.yaml
+++ b/tools/cfgs/dataset_configs/avlrooftop/DA/avlrooftop_dataset.yaml
@@ -62,8 +62,8 @@ DISREGARD_TRUNCATED: True
 EVAL_FOV_ONLY: True
 EVAL_MAX_DISTANCE: [0, 1000]
 
-POST_SN_ENABLED: False
-POST_SN_SOURCE: "ZOD"
+POST_SN_ENABLED: True
+POST_SN_SOURCE: "AVLTruck"
 POST_SN_MAP: {
   "AVLTruck":   
     {"Vehicle": [0.225, 0.183, 0.068],
