--- a/tools/cfgs/dataset_configs/avltruck/DA/avltruck_dataset.yaml
+++ b/tools/cfgs/dataset_configs/avltruck/DA/avltruck_dataset.yaml
@@ -73,7 +73,7 @@ EVAL_FOV_ONLY: True
 EVAL_MAX_DISTANCE: [0, 1000]
 EVAL_IGNORE_CLASSES: []
 
-POST_SN_ENABLED: False
+POST_SN_ENABLED: True
 POST_SN_SOURCE: "ZOD"
 POST_SN_MAP: { 
   "AVLRooftop":   
