--- a/tools/cfgs/dataset_configs/avlrooftop/OD/avlrooftop_dataset_feat3.yaml
+++ b/tools/cfgs/dataset_configs/avlrooftop/OD/avlrooftop_dataset_feat3.yaml
@@ -124,7 +124,7 @@ DATA_AUGMENTOR:
         #"LargeVehicle_TruckCab:0",
         #"Trailer:0",
 
-      NUM_POINT_FEATURES: 3
+      NUM_POINT_FEATURES: 4
       DATABASE_WITH_FAKELIDAR: False
       REMOVE_EXTRA_WIDTH: [0.0, 0.0, 0.0]
       LIMIT_WHOLE_SCENE: True
@@ -142,7 +142,7 @@ POINT_FEATURE_ENCODING:
   {
     encoding_type: absolute_coordinates_encoding,
     used_feature_list: ["x", "y", "z"],
-    src_feature_list: ["x", "y", "z"],
+    src_feature_list: ["x", "y", "z", "intensity"],
   }
 
 DATA_PROCESSOR:
