--- a/tools/cfgs/dataset_configs/zod/DA/zod_dataset.yaml
+++ b/tools/cfgs/dataset_configs/zod/DA/zod_dataset.yaml
@@ -36,7 +36,7 @@ FOV_POINTS_ONLY: True
 #EVAL_MAX_DISTANCE: [[0, 1000], [0,20], [20, 40], [40, 60], [60, 80], [80, 100], [100, 150]]
 EVAL_MAX_DISTANCE: [0, 1000]
 
-POST_SN_ENABLED: False
+POST_SN_ENABLED: True
 POST_SN_SOURCE: "AVLRooftop"
 POST_SN_MAP: {
   "AVLRooftop":   
